--- a/AICodeAnalyzer/MainWindow.xaml
+++ b/AICodeAnalyzer/MainWindow.xaml
@@ -218,6 +218,7 @@
                                Margin="5,5,5,0"
                                Text=""
                                FontStyle="Italic"
+                               FontWeight="Bold"
                                FontSize="11"
                                Foreground="#707070" />
 
@@ -279,6 +280,7 @@
                                TextWrapping="Wrap"
                                Margin="5,5,5,5"
                                FontStyle="Italic"
+                               FontWeight="Bold"
                                FontSize="11"
                                Foreground="#707070" />
                 </Grid>
